# juce-audio-lib-demo

./: .gitignore  AudioLib.jucer  CMakeLists.txt  README.md  build_android.bat  build_win.bat
Builds/iOS/AudioLibDemo.xcodeproj/: project.pbxproj
Builds/iOS/AudioLibDemo.xcodeproj/project.xcworkspace/xcuserdata/thuyetphamvan.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/iOS/AudioLibDemo.xcodeproj/xcuserdata/thuyetphamvan.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
Source/: AudioAPI.cpp  AudioAPI.h  AudioDLL.cpp  AudioDLL.h  AudioPlayerImpl.cpp  AudioPlayerImpl.h
test/: CMakeLists.txt  main.cpp
